# xerpa

./: Prueba técnica - Backend Data .xlsx  README.md  locusttest.py  manage.py  pyproject.toml  requirements.txt  retrieve.py
TX/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
TX/migrations/: 0001_initial.py  0002_alter_category_name_alter_category_type_and_more.py  0003_rename_category_categorías_rename_merchant_comercios_and_more.py  0004_categorias_alter_comercios_merchant_logo_and_more.py  0005_rename_categorias_category_rename_keywords_keyword_and_more.py  0006_alter_keyword_merchant_alter_merchant_category_and_more.py  0007_alter_category_created_at_alter_category_name_and_more.py  0008_rename_category_categorias_rename_merchant_comercios_and_more.py  0009_remove_transacciones_category_and_more.py  0010_transacciones_category_transacciones_created_at_and_more.py
xerpa/: asgi.py  settings.py  urls.py  wsgi.py
