[tool.poetry]
name = "xerpa"
version = "0.1.0"
description = ""
authors = ["mario <mariotorreslagos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.9"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
